--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,6 +1,11 @@
+@media screen and (min-width: 1024px) {
+  .main {
+    max-width: 760px;
+    width: 760px;
+  }
+}
+
 .main {
-  max-width: 760px;
-  width: 760px;
   padding: 10rem 1.5rem;
 }
 
